[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/img/Nueva carpeta/movement.webm" type="VideoStream" id=1]
[ext_resource path="res://assets/img/Nueva carpeta/special_attack.webm" type="VideoStream" id=2]
[ext_resource path="res://assets/img/Nueva carpeta/auto_fire.webm" type="VideoStream" id=3]
[ext_resource path="res://fonts/Debug.otf" type="DynamicFontData" id=4]
[ext_resource path="res://models/Loading/Loading.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[node name="Loading" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
color = Color( 0.533333, 0.533333, 0.533333, 1 )

[node name="Movement" type="VideoPlayer" parent="."]
margin_left = 70.0
margin_top = 120.0
margin_right = 320.0
margin_bottom = 320.0
stream = ExtResource( 1 )
autoplay = true

[node name="Label" type="Label" parent="Movement"]
margin_left = 60.0
margin_top = -44.0
margin_right = 187.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 1 )
text = "Movement"

[node name="MoveDescription" type="Label" parent="Movement"]
margin_left = 2.0
margin_top = 210.0
margin_right = 252.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 3 )
text = "Use the W, A, S, and D keys to move the character"
align = 1
autowrap = true

[node name="AutoFire" type="VideoPlayer" parent="."]
margin_left = 383.0
margin_top = 120.0
margin_right = 633.0
margin_bottom = 320.0
stream = ExtResource( 3 )
autoplay = true

[node name="Label2" type="Label" parent="AutoFire"]
margin_left = 62.0
margin_top = -46.0
margin_right = 177.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 1 )
text = "Auto Fire"

[node name="AutoFireDescription" type="Label" parent="AutoFire"]
margin_left = 2.0
margin_top = 211.0
margin_right = 252.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 3 )
text = "You dont need to worry about shooting as it is done automatically"
align = 1
autowrap = true

[node name="SpecialAttack" type="VideoPlayer" parent="."]
margin_left = 700.0
margin_top = 120.0
margin_right = 950.0
margin_bottom = 320.0
stream = ExtResource( 2 )
autoplay = true

[node name="Label3" type="Label" parent="SpecialAttack"]
margin_left = 41.0
margin_top = -42.0
margin_right = 220.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 1 )
text = "Special Attack"

[node name="SpecialAttackDescription" type="Label" parent="SpecialAttack"]
margin_left = 2.0
margin_top = 210.0
margin_right = 252.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 3 )
text = "Use the F key to perform a powerful attack, but be careful with your life points"
align = 1
autowrap = true

[node name="LoadingLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 545.0
margin_right = 149.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 2 )
text = "loading"

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
